# composite

./: CMakeLists.txt  README.md
cmake/: caddie.pc.in  caddieConfig.cmake.in  composite.pc.in  compositeConfig.cmake.in
include/: CMakeLists.txt  version.hpp.in
include/caddie/: aligned_mem.hpp  application.hpp  component.hpp  input_port.hpp  lifecycle.hpp  output_port.hpp  port.hpp  port_set.hpp  property_set.hpp  timestamp.hpp
include/composite/: application.hpp  component.hpp  input_port.hpp  lifecycle.hpp  metadata.hpp  output_port.hpp  port.hpp  port_set.hpp  property_set.hpp  timestamp.hpp
src/: CMakeLists.txt  main.cpp  server.cpp
